@@ -71,47 +71,6 @@ idft(fftw_complex *src_buf, gdouble *dst_buf, gint width, gint height)
   return TRUE;
 }
 
-gboolean encode(gdouble *pixelhandle, gint is_even)
-{
-  glong int_pixel = (glong)(*pixelhandle);
-
-  if (is_even != 1 && is_even != 0)
-    return FALSE;
-  if (*pixelhandle<0 && *pixelhandle>-1)
-    is_even = 5;
-  *pixelhandle -= int_pixel;  
-  int_pixel = 10 * int_pixel + is_even;
-  *pixelhandle += int_pixel;
-
-  return TRUE;
-}
-
-  
-gint decode(gdouble *pixelhandle)
-{
-  glong int_pixel = (glong)(*pixelhandle);
-  *pixelhandle -= int_pixel;
-  if (int_pixel == 5)
-    {
-      return 1;
-    }
-  else if (int_pixel%10 == 1)
-    {
-      *pixelhandle += int_pixel/10;
-      return 1;
-    }
-  else if (int_pixel%10 == -9)
-    {
-      *pixelhandle += int_pixel/10 - 1;
-      return 1;
-    }
-  else
-    {
-      *pixelhandle += int_pixel/10;
-      return 0;
-    }
-}
-
 gboolean
 homo_dft(gdouble *src_buf, fftw_complex *dst_buf, gint width, gint height)
 {
